--- a/src/Resources/views/storefront/page/checkout/confirm/index.html.twig
+++ b/src/Resources/views/storefront/page/checkout/confirm/index.html.twig
@@ -1,7 +1,7 @@
 {% sw_extends '@Storefront/storefront/page/checkout/confirm/index.html.twig' %}
 
 {% block page_checkout_main_content %}
-    <div id="mollie_hide_applepay" data-mollie-apple-pay-payment-method-options="{{ {
+    <div id="mollie_hide_applepay" data-mollie-template-applepay-checkout data-mollie-apple-pay-payment-method-options="{{ {
         shopUrl: seoUrl('frontend.home.page'),
         hideAlways: false
     }
