--- a/src/Resources/views/storefront/component/product/card/action.html.twig
+++ b/src/Resources/views/storefront/component/product/card/action.html.twig
@@ -15,7 +15,7 @@
             {% endif %}
         {% endif %}
 
-        {% if mollie_applepaydirect_enabled and productPrice > 0 %}
+        {% if mollie_applepaydirect_enabled and ('plp' not in mollie_applepaydirect_restrictions) and productPrice > 0 %}
             {% block component_product_box_action_buy_apple_direct_component %}
                 <div class="mb-2 d-none only-support-apple-pay js-apple-pay-container">
                     {% include '@MolliePayments/mollie/component/apple-pay-direct-button.twig' %}
