--- a/src/Resources/views/storefront/page/product-detail/buy-widget-form.html.twig
+++ b/src/Resources/views/storefront/page/product-detail/buy-widget-form.html.twig
@@ -22,7 +22,7 @@
             {% endif %}
         {% endif %}
 
-        {% if mollie_applepaydirect_enabled and ((buyableLegacy) or (buyable and productPrice) > 0) %}
+        {% if mollie_applepaydirect_enabled and ('pdp' not in mollie_applepaydirect_restrictions) and  ((buyableLegacy) or (buyable and productPrice) > 0) %}
             {% block page_product_detail_buy_container_apple_direct_component %}
                 <div class="form-row mt-3 justify-content-end js-apple-pay-container">
                     {% include '@MolliePayments/mollie/component/apple-pay-direct-button.twig' with {cols: 'col-8'} %}
