--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-section-info/mollie-pluginconfig-section-info.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-section-info/mollie-pluginconfig-section-info.html.twig
@@ -38,6 +38,10 @@
             <sw-icon name="default-communication-speech-bubbles"></sw-icon>
             {{ $tc('mollie-payments.config.info.btnSupport') }}
         </sw-button>
+        <sw-button class="btn-action" @click="openSupport">
+            <sw-icon name="default-communication-envelope"></sw-icon>
+            {{ $tc('mollie-payments.config.info.btnSupport') }}
+        </sw-button>
         <sw-external-link class="link-troubleshooting"
                           :small="false" icon="small-arrow-small-external" rel="noopener"
                           target="_blank" href="https://github.com/mollie/Shopware6/wiki/Troubleshooting">
