--- a/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
@@ -10,24 +10,21 @@
             {% parent %}
         {% endblock %}
 
+        {#
+        ===================================================================================================================
+        MOLLIE ACTIONS
+        ===================================================================================================================
+        #}
         {% block sw_order_line_items_grid_mollie_actions %}
             <div align="right" v-if="isMollieOrder">
-                <sw-button-group :disabled="isLoading">
-
+                <sw-button-group>
                     {% block sw_order_line_items_grid_mollie_actions_button %}
-                        <sw-button class="sw-order-line-items-grid__actions-btn" variant="ghost" size="small"
-                                   :block="true"
-                                   v-if="possibleActionsCount >= 1">
+                        <sw-button class="sw-order-line-items-grid__actions-btn" variant="ghost" size="small" :block="true"
+                                   :disabled="possibleActionsCount <= 0">
                             <sw-icon name="default-badge-info" decorative></sw-icon>
                             {{ $tc('mollie-payments.general.btnMollieActions') }}&nbsp;({{ possibleActionsCount }})
                         </sw-button>
-                        <sw-button class="sw-order-line-items-grid__actions-btn" variant="ghost" size="small"
-                                   v-if="possibleActionsCount < 1"
-                                   disabled="true">
-                            {{ $tc('mollie-payments.general.btnMollieActions') }}
-                        </sw-button>
                     {% endblock %}
-
                     {% block sw_order_line_items_grid_mollie_actions_context_button %}
                         <sw-context-button>
                             <template #button>
@@ -36,130 +33,58 @@
                                     </sw-icon>
                                 </sw-button>
                             </template>
-
                             {% block sw_order_line_items_grid_mollie_actions_dropdown %}
                                 {% block sw_order_line_items_grid_mollie_actions_dropdown_ship %}
-                                    <sw-context-menu-item
-                                            class="sw-order-line-items-grid__actions-ship-button"
-                                            icon="default-package-open"
-                                            :disabled="!isShippingPossible"
-                                            @click="onOpenShipOrderModal">
+                                    <sw-context-menu-item class="sw-order-line-items-grid__actions-ship-button"
+                                                          icon="default-package-open"
+                                                          :disabled="!isShippingPossible"
+                                                          @click="onOpenShipOrderModal">
                                         {{ $tc('mollie-payments.general.shipThroughMollie') }}
                                     </sw-context-menu-item>
                                 {% endblock %}
                                 {% block sw_order_line_items_grid_mollie_actions_dropdown_refund %}
-                                    <sw-context-menu-item
-                                            class="sw-order-line-items-grid__actions-refund-btn"
-                                            icon="default-money-cash"
-                                            :disabled="!canOpenRefundModal"
-                                            @click="onOpenRefundModal">
+                                    <sw-context-menu-item class="sw-order-line-items-grid__actions-refund-btn"
+                                                          icon="default-money-cash"
+                                                          @click="onOpenRefundModal">
                                         {{ $tc('mollie-payments.general.refundThroughMollie') }}
                                     </sw-context-menu-item>
                                 {% endblock %}
                             {% endblock %}
-
                         </sw-context-button>
                     {% endblock %}
                 </sw-button-group>
             </div>
         {% endblock %}
+
     </sw-container>
 
+    {#
+    ===================================================================================================================
+    REFUND MANAGER
+    ===================================================================================================================
+    #}
     <sw-modal v-if="showRefundModal"
-              @modal-close="onCloseRefundModal"
               :title="$tc('mollie-payments.modals.refund.title')"
-              :variant="refunds.length > 0 ? 'large' : 'small'">
-        <sw-container columns="1fr auto" :gap="refunds.length > 0 ? '16px' : '0'">
-            <sw-data-grid
-                    :dataSource="refunds"
-                    :columns="getRefundListColumns"
-                    :showSelection="false"
-                    v-if="refunds.length > 0">
-                <template #column-amount.value="{ item }">
-                    <sw-container columns="1fr auto" gap="8px" align="center">
-                        {{ item.amount.value | currency(item.amount.currency) }}
-                        <sw-help-text :text="item.description"></sw-help-text>
-                    </sw-container>
-                </template>
-                <template #column-status="{ item }">
-                    <sw-container columns="1fr auto" gap="8px" align="center">
-                        {{ getStatus(item.status) }}
-                        <sw-help-text :text="getStatusDescription(item.status)"></sw-help-text>
-                    </sw-container>
-                </template>
-                <template #column-createdAt="{ item }">
-                    {{ item.createdAt | date({hour: '2-digit', minute: '2-digit'}) }}
-                </template>
-                <template #actions="{ item }">
-                    <sw-context-menu-item :disabled="!isRefundCancelable(item)"
-                                          variant="danger"
-                                          @click="cancelRefund(item)">
-                        {{ $tc('mollie-payments.modals.refund.list.context.cancel') }}
-                    </sw-context-menu-item>
-                </template>
-            </sw-data-grid>
-            <div>
-                <sw-description-list grid="225px 1fr"
-                                     v-if="!isLoading"
-                                     class="sw-order-detail__summary-data">
-                    {% block sw_order_line_items_grid_refund_summary %}
-                        {% block sw_order_line_items_grid_refund_summary_amount_total %}
-                            <template v-if="order.price.taxStatus !== 'tax-free'">
-                                <dt>{{ $tc('sw-order.detailBase.summaryLabelAmountTotal') }}</dt>
-                                <dd>{{ order.amountTotal | currency(order.currency.shortName) }}</dd>
-                            </template>
-                        {% endblock %}
+              class="mollie-modal-refund-manager"
+              variant="full"
+              @modal-close="onCloseRefundModal">
 
-                        {% block sw_order_line_items_grid_refund_summary_amount_free_tax %}
-                            <template v-if="order.price.taxStatus === 'tax-free'">
-                                <dt>{{ $tc('sw-order.detailBase.summaryLabelAmount') }}</dt>
-                                <dd>{{ order.positionPrice | currency(order.currency.translated.shortName) }}</dd>
-                            </template>
-                        {% endblock %}
-
-                        {% block sw_order_line_items_grid_refund_summary_amount_voucher %}
-                            <template v-if="voucherAmount > 0">
-                                <dt>{{ $tc('sw-order.detailExtended.totalVouchers') }}</dt>
-                                <dd>{{ voucherAmount | currency(order.currency.shortName) }}</dd>
-                            </template>
-                        {% endblock %}
-
-                        {% block sw_order_line_items_grid_refund_summary_amount_refunded %}
-                            <dt>{{ $tc('sw-order.detailExtended.totalRefunds') }}</dt>
-                            <dd>{{ refundedAmount | currency(order.currency.shortName) }}</dd>
-                        {% endblock %}
-
-                        {% block sw_order_line_items_grid_refund_summary_amount_remaining %}
-                            <dt>{{ $tc('sw-order.detailExtended.totalRemaining') }}</dt>
-                            <dd>{{ remainingAmount | currency(order.currency.shortName) }}</dd>
-                        {% endblock %}
-                    {% endblock %}
-                </sw-description-list>
-
-                <sw-number-field
-                        :min="0"
-                        :max="remainingAmount"
-                        v-model="refundAmount"
-                        numberType="float"
-                        size="medium"
-                        :step="1">
-                    <template #suffix>
-                        {{ order.currency.symbol }}
-                    </template>
-                </sw-number-field>
-            </div>
-        </sw-container>
+        <mollie-refund-manager
+                :order="order">
+        </mollie-refund-manager>
 
         <template #modal-footer>
-            <sw-button @click="onCloseRefundModal" size="small">
-                {{ $tc('mollie-payments.modals.refund.cancelButton') }}
-            </sw-button>
-            <sw-button @click="onConfirmRefund()" variant="primary" size="small">
-                {{ $tc('mollie-payments.modals.refund.confirmButton') }}
+            <sw-button size="large" @click="onCloseRefundModal">
+                Close
             </sw-button>
         </template>
     </sw-modal>
 
+    {#
+    ===================================================================================================================
+    SHIPPING
+    ===================================================================================================================
+    #}
     <sw-modal v-if="showShipOrderModal"
               @modal-close="onCloseShipOrderModal"
               :title="$tc('mollie-payments.modals.shipping.title')"
