--- a/src/Resources/views/storefront/page/product-detail/buy-widget-form.html.twig
+++ b/src/Resources/views/storefront/page/product-detail/buy-widget-form.html.twig
@@ -88,10 +88,9 @@
                             {% block page_product_detail_buy_button %}
                                 {% if(config('MolliePayments.config.enableSubscriptions') and page.product.customFields.mollie_subscription.mollie_subscription_product) %}
                                     <button class="btn btn-primary btn-block btn-buy"
-                                            title="{{ config('MolliePayments.config.addToCartText') }}"
-                                            aria-label="{{ config('MolliePayments.config.addToCartText') }}">
-                                        {{ config('MolliePayments.config.addToCartText') }}
-                                        {% if config('MolliePayments.config.addToCartText') is empty %} {{ "mollie-subscriptions.product.addToCartText"|trans|sw_sanitize }} {% endif %}
+                                            title="{{ "mollie-subscriptions.product.addToCartText"|trans|sw_sanitize }}"
+                                            aria-label="{{ "mollie-subscriptions.product.addToCartText"|trans|sw_sanitize }}">
+                                        {{ "mollie-subscriptions.product.addToCartText"|trans|sw_sanitize }}
                                     </button>
                                 {% else %}
                                     <button class="btn btn-primary btn-block btn-buy"
