Fixes magmodules/shopware-mollie-subscriptions#39 Add status translations in Admin

--- a/src/Resources/app/administration/src/module/mollie-subscriptions/page/mollie-subscriptions-to-product-list/mollie-subscriptions-to-product-list.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-subscriptions/page/mollie-subscriptions-to-product-list/mollie-subscriptions-to-product-list.html.twig
@@ -20,6 +20,12 @@
                         </template>
                     {% endblock %}
 
+                    {% block mollie_subscriptions_list_content_list_status %}
+                        <template #column-status="{ item }">
+                            {{ statusTransation(item.status) }}
+                        </template>
+                    {% endblock %}
+
                     {% block mollie_subscriptions_list_content_list_created_at %}
                         <template #column-createdAt="{ item }">
                             {{ item.createdAt | date('d/m/Y') }}
