--- a/src/Resources/app/administration/src/module/sw-product/component/sw-product-mollie-subscription-config/sw-product-mollie-subscription-config.html.twig
+++ b/src/Resources/app/administration/src/module/sw-product/component/sw-product-mollie-subscription-config/sw-product-mollie-subscription-config.html.twig
@@ -42,6 +42,7 @@
                             <sw-text-field
                                 :label="$tc('mollie-subscription.mollieSubscriptionIntervalAmount')"
                                 :map-inheritance="props"
+                                :disabled="props.isInherited"
                                 :value="props.currentValue"
                                 @change="props.updateCurrentValue"
                                 :required="product.customFields.mollie_subscription.mollie_subscription_product"/>
@@ -76,6 +77,7 @@
                             <sw-text-field
                                 :label="$tc('mollie-subscription.mollieSubscriptionRepetitionAmount')"
                                 :map-inheritance="props"
+                                :disabled="props.isInherited"
                                 :value="props.currentValue"
                                 @change="props.updateCurrentValue"
                                 :required="product.customFields.mollie_subscription.mollie_subscription_product && product.customFields.mollie_subscription.mollie_subscription_repetition_type === 'times'"
